# weather_server_demo

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.toml
migrations/: 20240922135327_create_database.sql
src/: api.rs  authorization.rs  config.rs  helpers.rs  http_client.rs  lib.rs  main.rs  password.rs  queries.rs  server.rs
tests/: api.rs  http_client.rs
