[package]
name = "weather_server_demo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "weather_server_lib"

[[bin]]
path = "src/main.rs"
name = "weather_server_demo"

[dependencies]
poem = { version = "3.1", features = ["session"] }
poem-openapi = { version = "5.1", features = ["swagger-ui"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
rand = { version = "0.9.0-alpha.2", default-features = false, features = ["std", "std_rng", "getrandom"] }
wiremock = "0.6"
